--- a/accelerator_project/static/css/main.css
+++ b/accelerator_project/static/css/main.css
@@ -43,13 +43,13 @@ body {
 .mainButton {
     /*position: relative;
     top: var(--offset);*/
-    padding: 50px 100px;
-    border-radius: 30px;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 3em;
-    letter-spacing: 0.2em;
-    font-weight: 500;
+    /* padding: 50px 100px;
+    border-radius: 30px; */
+    /* text-decoration: none; */
+    /* text-transform: uppercase; */
+    /* font-size: 3em; */
+    /* letter-spacing: 0.2em; */
+    /* font-weight: 500; */
     border: none;
     color: #151D28;
     cursor: pointer;
@@ -66,20 +66,20 @@ body {
 
 .downloadButton {
     position: relative;
-    padding: 50px 100px;
+    /* padding: 50px 100px; */
     border-radius: 30px;
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 3em;
-    letter-spacing: 0.2em;
-    font-weight: 500;
+    /* text-decoration: none; */
+    /* text-transform: uppercase; */
+    /* font-size: 3em; */
+    /* letter-spacing: 0.2em; */
+    /* font-weight: 500; */
     border: none;
     color: #151D28;
     cursor: pointer;
     background-color: var(--clr);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    /* display: flex; */
+    /* justify-content: center;
+    align-items: center; */
     transition: 0.7s;
 }
 
