--- a/accelerator_project/templates/main/test_gesture.html
+++ b/accelerator_project/templates/main/test_gesture.html
@@ -1,28 +1,36 @@
 {% extends "base.html" %}
 {% block content %}
     <div class="col-12 col-md-4 offset-md-4 bg-blue mt-4">
-        <div class="row">
-            <div style="display: flex; flex-direction: column">
-                <div class="chart" style="display: none">
-                    <canvas id="AccelerationChart"></canvas>
-                    <div style="padding: 50px"></div>
-                    <canvas id="GyroChart"></canvas>
-                </div>
+        <div style="display: flex; flex-direction: column">
+            <div class="chart" style="display: none">
+                <canvas id="AccelerationChart"></canvas>
+                <div style="padding: 50px"></div>
+                <canvas id="GyroChart"></canvas>
+            </div>
 
-                <span class="text-white text-center mb-3" id="gestureUsername" data-username="{{ username }}">Пользователь: {{ username }}</span>
+            <span class="text-white text-center mb-3" id="gestureUsername" data-username="{{ username }}">Пользователь: {{ username }}</span>
 
-                <div class="progress-container mb-3">
-                    <div class="progress-bar d-none" id="myProgressBar"></div>
-                </div>
-                <div id="statusDiv" class="d-none text-success my-2 text-center" style="font-size:30px;">
-                    
-                </div>
+            <div class="progress-container mb-3">
+                <div class="progress-bar d-none" id="myProgressBar"></div>
+            </div>
+            <div id="gesturesCountDiv" class="text-info my-2" style="">
+                <p>Количество жестов</p>
+                <select id="gesturesCountSelect" class="form-control">
+                    <option value="10">10</option>
+                    <option value="20">20</option>
+                    <option value="30">30</option>
+                    <option value="40">40</option>
+                </select>
+            </div>
+            <div id="statusDiv" class="d-none text-success my-2 text-center" style="font-size:30px;">
+                
+            </div>
 
-                <div id="buttonsSection" class="buttons" style="display: flex; flex-direction: column">
-                    <button class="downloadButton" style="position: relative; display: none"><i class="fa-solid fa-download"></i>Upload
-                    </button>
-                    <button class="mainButton">START TEST</button>
-                </div>
+            <div id="buttonsSection" class="buttons" style="display: flex; flex-direction: column">
+                <button class="btn p-2 downloadButton" style="position: relative; display: none">
+                    <i class="fa-solid fa-download"></i>Upload
+                </button>
+                <button class="btn p-2 my-2 mainButton">START TEST</button>
             </div>
         </div>
     </div>
